<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.SaveScreenFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/saveplacescreendimg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/SaveThisPlaces"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/dataform2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="10dp" />

        <TextView
            android:id="@+id/dataform1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10dp"

            />

        <EditText
            android:id="@+id/edplcname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/playfair_display"
            android:hint="@string/PlacesName"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#363636"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edplcinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/playfair_display"
            android:hint="@string/PlacesInfo"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#363636"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="184dp">


            <ImageView
                android:id="@+id/imgthisplace"
                android:layout_width="137dp"
                android:layout_height="142dp"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="8dp"
                android:src="@android:drawable/ic_menu_camera"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="140dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/playfair_display"


                android:text="@string/PleaseSelectImage"
                android:textSize="25dp"

                android:textStyle="bold"

                />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSavethisplaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple_500"
            android:padding="15dp"
            android:text="@string/SaveLocation"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:elevation="10dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />
    </LinearLayout>
</RelativeLayout>